# protoc-gen-gotemplate

./: .gitignore  .kazelcfg.json  BUILD.bazel  WORKSPACE  go.mod  go.sum  load.bzl  repos.bzl
cmd/web-editor/: BUILD.bazel
helpers/: BUILD.bazel
